--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,5 +3,5 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: red;
+    background-color: whitesmoke;
 }
