--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,19 @@
     min-height: 100vh;
 }
 
+/* Definição da fonte customizada Poppins */
+@font-face {
+    font-family: 'Poppins';
+    src: url('../assets/fontes/Poppins-Bold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+/* Aplicação da fonte aos headings */
+/*h1, h2, h3, h4, h5, h6{
+    font-family: 'Poppins';
+    font-weight: 800;
+}*/
 #containerform {
     -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05), 
                 0 4px 15px rgba(0, 0, 0, 0.05);
@@ -115,7 +128,8 @@ textarea.form-control {
 .form-control.is-invalid:focus,
 .form-select.is-invalid:focus {
     border-color: #dc3545;
-    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+    -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+            box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
 }
 
 .form-control.is-valid,
@@ -131,7 +145,8 @@ textarea.form-control {
 .form-control.is-valid:focus,
 .form-select.is-valid:focus {
     border-color: #198754;
-    box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+    -webkit-box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+            box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
 }
 
 .valid-feedback {
@@ -508,4 +523,9 @@ textarea.form-control {
     -webkit-box-align: center !important;
     -ms-flex-align: center !important;
     align-items: center !important;
+}
+.menu-nav{
+    font-size: 14px;
+    font-weight: 600;
+    color: #99a1b7;
 }
