Criar empresa, desativar, inicio de editar empresa. menu lateral.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,9 @@
 .bg-backoffice {
     background-color: #F9F9F9;
 }
-
+.curso-ponteiro{
+    cursor: pointer;
+}
 
 /* Definição da fonte customizada Poppins */
 @font-face {
@@ -120,7 +122,12 @@ textarea.form-control {
     font-size: 0.875rem;
     color: #dc3545;
 }
-
+.form-control{
+    background-color: #f9f9f9 !important;
+}
+.form-select{
+    background-color: #f9f9f9 !important;
+}
 .form-control.is-invalid,
 .form-select.is-invalid {
     border-color: #dc3545;
@@ -609,4 +616,31 @@ textarea.form-control {
     border-style: dotted;
     border-color: #6c757d !important;
     max-width: 280px;
+}
+.btn-light{
+    background-color: #f9f9f9;
+}
+.dropdown-item-menor{
+    font-size: 13px !important;
+    font-weight: 500;
+}
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 6px;              /* largura máxima */
+  background: #ffffff;       /* fundo branco */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8a8a8a; /* barra cinza escuro */
+  border-radius: 8px;        /* arredondamento opcional */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #8a8a8a; /* cor mais escura ao passar o mouse */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;             /* fino */
+  scrollbar-color: #8a8a8a #ffffff;  /* thumb cinza escuro + fundo branco */
 }
