Fluxo completo de colaborador

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,4 @@
+/* (arquivo original restaurado. Removidas as regras inseridas anteriormente para espaçamento específico do input-group) */
 .bg-login {
     background-image: url('../assets/images/bg-inicial.jpg')!important;
     background-position: center;
