--- a/www/css/style.css
+++ b/www/css/style.css
@@ -681,3 +681,66 @@ textarea.form-control {
   scrollbar-width: thin;             /* fino */
   scrollbar-color: #8a8a8a #ffffff;  /* thumb cinza escuro + fundo branco */
 }
+
+/* Estilos para Cards dos Times - Altura Uniforme */
+#repeat_times {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#repeat_times .col-3 {
+    display: flex;
+    flex-direction: column;
+}
+
+#repeat_times .row.h-100 {
+    flex: 1;
+    display: flex;
+}
+
+#repeat_times .col.bg-white {
+    display: flex;
+    flex-direction: column;
+    min-height: 200px; /* altura mínima para uniformidade */
+}
+
+/* Garantir que o conteúdo se distribua corretamente */
+#repeat_times .col.bg-white > div:last-child {
+    margin-top: auto; /* empurra o último elemento para o final */
+}
+
+/* Ajustar altura da descrição para manter uniformidade */
+#repeat_times .col.bg-white p {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* limita a 3 linhas */
+    -webkit-box-orient: vertical;
+}
+
+/* Responsividade para os cards dos times */
+@media (max-width: 1199.98px) {
+    #repeat_times .col-3 {
+        width: 33.333333%;
+        flex: 0 0 33.333333%;
+    }
+}
+
+@media (max-width: 991.98px) {
+    #repeat_times .col-3 {
+        width: 50%;
+        flex: 0 0 50%;
+    }
+}
+
+@media (max-width: 767.98px) {
+    #repeat_times .col-3 {
+        width: 100%;
+        flex: 0 0 100%;
+    }
+    
+    #repeat_times .col.bg-white {
+        min-height: 150px; /* altura menor em mobile */
+    }
+}
