Ajuste de sidebar do backoffice.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,7 +35,7 @@ html, body {
 }
 
 .bg-backoffice {
-    background-color: #F9F9F9;
+    background-color: #F0F4F9;
 }
 .curso-ponteiro{
     cursor: pointer;
@@ -684,23 +684,40 @@ textarea.form-control {
 
 /* Estilos para Cards dos Times - Altura Uniforme */
 #repeat_times {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 #repeat_times .col-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 #repeat_times .row.h-100 {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 #repeat_times .col.bg-white {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     min-height: 200px; /* altura mínima para uniformidade */
 }
 
@@ -711,7 +728,9 @@ textarea.form-control {
 
 /* Ajustar altura da descrição para manter uniformidade */
 #repeat_times .col.bg-white p {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -723,21 +742,27 @@ textarea.form-control {
 @media (max-width: 1199.98px) {
     #repeat_times .col-3 {
         width: 33.333333%;
-        flex: 0 0 33.333333%;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 33.333333%;
+                flex: 0 0 33.333333%;
     }
 }
 
 @media (max-width: 991.98px) {
     #repeat_times .col-3 {
         width: 50%;
-        flex: 0 0 50%;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 50%;
+                flex: 0 0 50%;
     }
 }
 
 @media (max-width: 767.98px) {
     #repeat_times .col-3 {
         width: 100%;
-        flex: 0 0 100%;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 0 100%;
+                flex: 0 0 100%;
     }
     
     #repeat_times .col.bg-white {
